# flapswitcher

./: .gitignore  CMakeLists.txt  README.md  adcSwitch.c  adcSwitch.c.backup  adcSwitch.c.old  attiny13.c.old  attiny13.elf  attiny13.hex  prog.sh
